fea-rs/test-data/compile-tests/mini-latin/bad/ligature_duplicate.fea
feature liga {
    sub a b  by one;
    sub a b  by four; # per fonttools, this replaces the earlier declaration.
} liga;
